--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "techneo---premium-software-solutions",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "<div align=\"center\">\r <img width=\"1200\" height=\"475\" alt=\"GHBanner\" src=\"https://github.com/user-attachments/assets/0aa67016-6eaf-458a-adb2-6e31a0763ed6\" />\r </div>",
+  "homepage": "https://github.com/madushpro/heptagonWeb#readme",
+  "bugs": {
+    "url": "https://github.com/madushpro/heptagonWeb/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/madushpro/heptagonWeb.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -25,4 +37,3 @@
     "vite": "^6.2.0"
   }
 }
-
